# voucher

./: .gitignore  DEPENDENCIES.md  README.md  justfile  meson.build  one.k8ie.Voucher.json  one.k8ie.qariant.json
data/: data.gresource.xml  meson.build  one.k8ie.Voucher.desktop.in  one.k8ie.Voucher.gschema.xml  one.k8ie.Voucher.metainfo.xml.in  one.k8ie.Voucher.service.in  one.k8ie.qariant.desktop.in  one.k8ie.qariant.gschema.xml  one.k8ie.qariant.metainfo.xml.in  one.k8ie.qariant.service.in
data/icons/: meson.build
flatpak-deps/: cargo-cryptography-sources.json  cargo-maturin-sources.json  python3-bech32.json  python3-bip32utils.json  python3-cffi.json  python3-cryptography.json  python3-keyring.json  python3-maturin.json  python3-mnemonic.json  python3-platformdirs.json  python3-puccinialin.json  python3-requests.json  python3-setuptools_rust.json
po/: POTFILES.in  meson.build
src/: lnutils.py  main.py  meson.build  qariant.gresource.xml  qariant.in  shortcuts-dialog.blp  voucher.gresource.xml  voucher.in  window.blp  window.py  window.ui
src/pages/: confirmation.blp  confirmation.py  keys.blp  keys.py  sites.blp  sites.py  status.blp  status.py
src/widgets/: menu-button.blp  menu_button.py  spinner-dialog.blp  spinner_dialog.py
subprojects/: blueprint-compiler.wrap
